--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,10 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'header.html' %}
 
 {% block header %}
   <h1>{% block title %}Log In{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
+<h1>Please enter your login information:</h1>
   <form method="post">
     <label for="username">Username</label>
     <input name="username" id="username" required>
